--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="hero">
         <div class="hero--content">
             <h1 class="hero--title">Hello There</h1>
-            <p class="hero--text">We are Leon - Super Creative & Minimal Agency web development</p>
+            <p class="hero--text">We are Leon - Super Creative & Minimal Agency web development create for cloud flare test</p>
         </div>
     </section>
 
